--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 			<artifactId>kafka_2.10</artifactId>
 			<version>0.8.2.0</version>
 		</dependency>
-		
+
 		<!-- springframework -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -49,6 +49,12 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>4.3.0.RELEASE</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+			<version>4.3.0.RELEASE</version>
+		</dependency>
 
 		<!-- spring-webmvc -->
 		<dependency>
@@ -56,7 +62,7 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>4.3.0.RELEASE</version>
 		</dependency>
-		
+
 
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -118,6 +124,42 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.30</version>
 		</dependency>
+
+		<!-- mybatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.4.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		
+		<dependency>
+    <groupId>com.alibaba</groupId>
+    <artifactId>druid</artifactId>
+    <version>1.0.21</version>
+</dependency>
+  
+    <!-- mybatis -->
+    
+    <!-- mongodb -->
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.0.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>1.7.1.RELEASE</version>
+		</dependency>
+<!-- mongodb -->
+
 	</dependencies>
 
 
