--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,12 @@
 		</dependency>
 <!-- mongodb -->
 
+     <dependency>
+           <groupId>commons-codec</groupId>
+           <artifactId>commons-codec</artifactId>
+           <version>1.8</version>
+      </dependency>
+
 	</dependencies>
 
 
