--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,11 +1,13 @@
-log4j.rootLogger=DEBUG,FILE
+log4j.rootLogger=INFO,console
 
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.target=System.err
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
 
 log4j.appender.FILE=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.FILE.File=/Users/yxl/data/idfa_consumer_log
-log4j.appender.FILE.DatePattern ='.'yyyy-MM-dd
-log4j.appender.FILE.MaxBackupIndex=5
+log4j.appender.FILE.File=/Users/yxl/data/log/log4j.log
+log4j.appender.FILE.DatePattern ='.'yyyy-MM-dd-HH-mm
 log4j.appender.FILE.Threshold=INFO
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%5p] - %c -%F(%L) -%m%n
-log4j.appender.FILE.MaxFileSize=10MB
